--- a/modules/chat/adapters/pages/chat.html
+++ b/modules/chat/adapters/pages/chat.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">    <!-- Estilos personalizados -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="styleschat.css">
+    <link rel="stylesheet" type="text/css" href=".../../../../../../sources/css/styleschat.css">
     
 </head>
 <body>
@@ -56,6 +56,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<script src="scriptchat.js"></script>
+<script src="../../../../kernel/utils/scriptchat.js"></script>
+<script src="../../../../sources/js/angular.min.js"></script>
 </body>
 </html>
