--- a/modules/contact/adapters/pages/contact.html
+++ b/modules/contact/adapters/pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="introduccion">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <title>Formulario de Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../../sources/css/navbar.css">
     <style>
         body,
         html {
@@ -58,7 +59,9 @@
     </style>
 </head>
 
-<body>
+<body ng-controller="contactController">
+    <div ng-include="'../../../../kernel/components/sidebar/navbar.html'" class="sticky-top" >
+    </div>
     <div class="centered-content">
         <div class="card custom-card">
             <h3 class="card-title text-center mb-4">Contáctanos</h3>
@@ -85,6 +88,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../../../kernel/utils/angular.min.js"></script>
+    <script src="../controller.js"></script>
 </body>
 
 </html>
