--- a/modules/home/adapters/pages/home.html
+++ b/modules/home/adapters/pages/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="introduccion">
 
 <head>
     <meta charset="UTF-8">
@@ -8,124 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-        .col-md-4 .card-img-top {
-            height: 200px;
-            width: 100%;
-            object-fit: cover;
-        }
-
-        .card {
-            position: relative;
-            overflow: hidden;
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
-
-        .card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: inherit;
-            filter: blur(3px);
-            z-index: -1;
-            transition: filter 0.2s;
-        }
-
-        .card:hover {
-            transform: scale(1.05);
-        }
-
-        .card:hover::before {
-            filter: blur(0);
-        }
-
-        .cropped {
-            position: relative;
-        }
-
-        .details-label {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px 20px;
-            border-radius: 5px;
-            z-index: 1;
-            opacity: 0;
-            transition: opacity 0.2s;
-        }
-
-        .card:hover .details-label {
-            opacity: 1;
-        }
-
-        .card:hover img {
-            filter: blur(3px);
-        }
-
-
-        .card-body p {
-            text-align: right;
-        }
-
-
-        .card-body h5 {
-            background-color: #003366;
-            color: white;
-            border-radius: 15px;
-            padding: 8px;
-        }
-
-        #carreras {
-            background-color: #09967e;
-            color: white;
-            border-radius: 10px;
-            padding: 10px;
-            font-size: 30px;
-        }
-
-        .txtNav {
-            color: white;
-        }     
-    </style>
+    <link rel="stylesheet" href="../../../../sources/css/navbar.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg sticky-top"
-        style="background: linear-gradient(90deg, rgba(129,223,202,1) 0%, rgba(39,166,138,1) 47%, rgba(5,92,73,1) 100%);">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/5/54/Logo-utez.png" alt="utez" height="35"
-                    width="85"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link txtNav" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link txtNav" href="#">Acerca de nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link txtNav" href="#">Carreras</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link txtNav" href="#">Contactanos</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body ng-controller="indexController"> 
+    <div ng-include="'../../../../kernel/components/sidebar/navbar.html'" class="sticky-top" >
+    </div>
     <br>
     <div class="container text-center">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -331,6 +219,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+        <script src="../../../../kernel/utils/angular.min.js"></script>
+        <script src="../controller.js"></script>
 </body>
 
 </html>
